fix: se cambio la estetica de los layouts

--- a/Android/BotonApplication/app/src/main/res/layout/activity_login.xml
+++ b/Android/BotonApplication/app/src/main/res/layout/activity_login.xml
@@ -19,12 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="¡Bienvenido de Nuevo!"
+        android:text="SafeTap \n ¡Bienvenido nuevamente!"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cardView" />
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
